new scripts that includes all jar files from the lib directory instead of relying on a manifest file, this allows the classpath to be extended with e.g. jdbc drivers by placing those in the lib directory